--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -15,6 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="red">Red</div>
+    <div class="blue">Blue</div>
+    <div class="green">Green</div>
+    <div class="yellow">Yellow</div>
+
 
 
     <!-- JavaScript -->
