Add images folder and favicon

--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/ico" href="FAVICON.ico"/>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
     <!--Custom Global Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="red">Red</div>
-    <div class="blue">Blue</div>
-    <div class="green">Green</div>
-    <div class="yellow">Yellow</div>
+
 
 
 
