--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   </head>
   <body>
 
+    <div id="container">
+      <div id="heading"><h1>Calculator</h1></div>
+
+      <div id="calculator">
+        <div id="screen"></div>
+      </div>
+
+
+
+    </div>
+
 
 
 
