--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
 
       <div id="calculator">
         <div id="screen"></div>
+        <div id="buttonContainer">
+          <button type="button" class="button biggerButton" name="button">CLEAR</button>
+          <button type="button" class="button" name="button">DEL</button>
+          <button type="button" class="button" name="button">%</button>
+          <button type="button" class="button" name="button">7</button>
+          <button type="button" class="button" name="button">8</button>
+          <button type="button" class="button" name="button">9</button>
+          <button type="button" class="button" name="button">+</button>
+          <button type="button" class="button" name="button">4</button>
+          <button type="button" class="button" name="button">5</button>
+          <button type="button" class="button" name="button">6</button>
+          <button type="button" class="button" name="button">-</button>
+          <button type="button" class="button" name="button">1</button>
+          <button type="button" class="button" name="button">2</button>
+          <button type="button" class="button" name="button">3</button>
+          <button type="button" class="button" name="button">x</button>
+          <button type="button" class="button" name="button">0</button>
+          <button type="button" class="button" name="button">.</button>
+          <button type="button" class="button biggerButton" name="button">=</button>
+        </div>
       </div>
 
 
