Change percentage to divide symbol

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <div id="buttonContainer">
           <button type="button" class="button biggerButton clearDel" name="button">CLEAR</button>
           <button type="button" class="button clearDel" name="button">DEL</button>
-          <button type="button" class="button operator" name="button">%</button>
+          <button type="button" class="button operator" name="button">&divide;</button>
           <button type="button" class="button number" name="button">7</button>
           <button type="button" class="button number" name="button">8</button>
           <button type="button" class="button number" name="button">9</button>
-          <button type="button" class="button operator" name="button">+</button>
+          <button type="button" class="button operator" name="button">&times;</button>
           <button type="button" class="button number" name="button">4</button>
           <button type="button" class="button number" name="button">5</button>
           <button type="button" class="button number" name="button">6</button>
-          <button type="button" class="button operator" name="button">-</button>
+          <button type="button" class="button operator" name="button">&minus;</button>
           <button type="button" class="button number" name="button">1</button>
           <button type="button" class="button number" name="button">2</button>
           <button type="button" class="button number" name="button">3</button>
-          <button type="button" class="button operator" name="button">x</button>
+          <button type="button" class="button operator" name="button">&plus;</button>
           <button type="button" class="button number" name="button">0</button>
           <button type="button" class="button operator" name="button">.</button>
-          <button type="button" class="button biggerButton equal" name="button">=</button>
+          <button type="button" class="button biggerButton equal" name="button">&equals;</button>
         </div>
       </div>
 
