Create CSS for screen text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <div id="heading"><h1>Calculator</h1></div>
 
       <div id="calculator">
-        <div id="screen"></div>
+        <div id="screen">
+          <div id="screenText">Hello           
+          </div>
+        </div>
         <div id="buttonContainer">
           <button type="button" class="button biggerButton clearDel" name="button">CLEAR</button>
           <button type="button" class="button clearDel" name="button">DEL</button>
