Add clear button function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div id="screenText">619</div>
         </div>
         <div id="buttonContainer">
-          <button type="button" class="button biggerButton clearDel" name="button">CLEAR</button>
+          <button type="button" class="button biggerButton clearDel" name="button" onclick="clearDisplay();">CLEAR</button>
           <button type="button" class="button clearDel" name="button">DEL</button>
           <button type="button" class="button operator" name="button">&divide;</button>
           <button type="button" class="button number" name="button" onclick="populate(7);">7</button>
