Add delete button function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="buttonContainer">
           <button type="button" class="button biggerButton clearDel" name="button" onclick="clearDisplay();">CLEAR</button>
-          <button type="button" class="button clearDel" name="button">DEL</button>
+          <button type="button" class="button clearDel" name="button" onclick="deleteLast();">DEL</button>
           <button type="button" class="button operator" name="button">&divide;</button>
           <button type="button" class="button number" name="button" onclick="populate(7);">7</button>
           <button type="button" class="button number" name="button" onclick="populate(8);">8</button>
