Add screen to show input

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
       <div id="calculator">
         <div id="screen">
+          <div id="screenCalc"></div>
           <div id="screenText">619</div>
         </div>
         <div id="buttonContainer">
