Remove long results

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div id="calculator">
         <div id="screen">
-          <div id="screenWorking">Wee</div>
+          <div id="screenWorking"></div>
           <div id="screenText">619</div>
         </div>
         <div id="buttonContainer">
