--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="calculator">
         <div id="screen">
           <div id="screenWorking"></div>
-          <div id="screenText">619</div>
+          <div id="screenText"></div>
         </div>
         <div id="buttonContainer">
           <button type="button" class="button biggerButton clearDel" name="button" onclick="clearDisplay();">CLEAR</button>
