--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         </div>
         <div id="buttonContainer">
           <button calc-clear class="button biggerButton clearDel" >CLEAR</button>
-          <button class="button clearDel" onclick="deleteLast();">DEL</button>
-          <button class="button operator" onclick="callOperator('/');">&divide;</button>
+          <button calc-delete class="button clearDel">DEL</button>
+          <button calc-operator class="button operator">÷</button>
           <button class="button number" onclick="populate(7);">7</button>
           <button class="button number" onclick="populate(8);">8</button>
           <button class="button number"  onclick="populate(9);">9</button>
-          <button class="button operator" onclick="callOperator('x');">&times;</button>
+          <button calc-operator class="button operator">×</button>
           <button class="button number" onclick="populate(4);">4</button>
           <button class="button number" onclick="populate(5);">5</button>
           <button class="button number" onclick="populate(6);">6</button>
-          <button class="button operator" onclick="callOperator('-');">&minus;</button>
+          <button calc-operator class="button operator">-</button>
           <button class="button number" onclick="populate(1);">1</button>
           <button class="button number" onclick="populate(2);">2</button>
           <button class="button number" onclick="populate(3);">3</button>
-          <button class="button operator" onclick="callOperator('+');">&plus;</button>
+          <button calc-operator class="button operator" >+</button>
           <button class="button number" onclick="populate(0);">0</button>
           <button class="button operator" onclick="populate('float');">.</button>
-          <button class="button biggerButton equal" onclick="operate();">&equals;</button>
+          <button class="button biggerButton equal" onclick="operate();">=</button>
         </div>
       </div>
 
