Change number input to query

--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
           <button calc-clear class="button biggerButton clearDel" >CLEAR</button>
           <button calc-delete class="button clearDel">DEL</button>
           <button calc-operator class="button operator">÷</button>
-          <button class="button number" onclick="populate(7);">7</button>
-          <button class="button number" onclick="populate(8);">8</button>
-          <button class="button number"  onclick="populate(9);">9</button>
+          <button value=7 calc-number class="button number">7</button>
+          <button value=8 calc-number class="button number">8</button>
+          <button value=9 calc-number class="button number">9</button>
           <button calc-operator class="button operator">×</button>
-          <button class="button number" onclick="populate(4);">4</button>
-          <button class="button number" onclick="populate(5);">5</button>
-          <button class="button number" onclick="populate(6);">6</button>
+          <button value=4 calc-number class="button number">4</button>
+          <button value=5 calc-number class="button number">5</button>
+          <button value=6 calc-number class="button number">6</button>
           <button calc-operator class="button operator">-</button>
-          <button class="button number" onclick="populate(1);">1</button>
-          <button class="button number" onclick="populate(2);">2</button>
-          <button class="button number" onclick="populate(3);">3</button>
+          <button value=1 calc-number class="button number">1</button>
+          <button value=2 calc-number class="button number">2</button>
+          <button value=3 calc-number class="button number">3</button>
           <button calc-operator class="button operator" >+</button>
-          <button class="button number" onclick="populate(0);">0</button>
-          <button class="button operator" onclick="populate('float');">.</button>
+          <button value=0 calc-number class="button number">0</button>
+          <button value=. calc-number class="button operator">.</button>
           <button class="button biggerButton equal" onclick="operate();">=</button>
         </div>
       </div>
