Change equals to query

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button calc-operator class="button operator" >+</button>
           <button value=0 calc-number class="button number">0</button>
           <button value=. calc-number class="button operator">.</button>
-          <button class="button biggerButton equal" onclick="operate();">=</button>
+          <button calc-equals class="button biggerButton equal">=</button>
         </div>
       </div>
 
